# openstack-env

./: .gitignore  AUTHORS.rst  CONTRIBUTING.rst  LICENSE  Makefile  README.rst  requirements.txt  setup.cfg  setup.py  tox.ini
docs/: Makefile  conf.py  index.rst  installation.rst  make.bat  usage.rst
openstack_env/: __init__.py  cli.py  context.py  credentials.py  domain.py  exceptions.py  main.py  openstack.py  openstack_env.py  resource_loaders.py  resource_managers.py  resources.py
tests/: test_openstack-env.py
