[metadata]
name = openstack-env
author = Artem Osadchyi
author-email = infernalrabbit@gmail.com
summary = Tool for uploading resources to OpenStack
description-file = README.rst
home-page = https://github.com/smithsane/openstack-env
license = Apache-2
classifiers =
    Development Status :: 2 - Pre-Alpha
        Intended Audience :: Developers
        License :: OSI Approved :: BSD License
        Natural Language :: English
        Programming Language :: Python :: 2
        Programming Language :: Python :: 2.6
        Programming Language :: Python :: 2.7
        Programming Language :: Python :: 3
        Programming Language :: Python :: 3.3
        Programming Language :: Python :: 3.4
[files]
packages =
    openstack_env

[entry_points]
console_scripts =
    osenv = openstack_env.cli:run
